[package]
name = "Rusty-Analyser"
version = "0.2.6-beta"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winbase", "fileapi", "ntdef", "winnt"] }
walkdir = "2.3"
chrono = "0.4"
rayon = "1.5"
console = "0.15.10"
lazy_static = "1.5.0"
colored = "3.0.0"
whoami = "1.5.2"

[features]
# DEBUG_MODE should be off by default
DEBUG_MODE = []

[profile.dev]
opt-level = 0
overflow-checks = true
debug = "full"
lto = "off"
panic = "abort"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
panic = "unwind"
lto = "thin"
